--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "framer-motion": "^10.12.4",
+    "leaflet": "^1.9.4",
     "locomotive-scroll": "^4.1.4",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
+    "react-leaflet": "^4.2.1",
     "react-parallax-tilt": "^1.7.143",
     "react-router-dom": "^6.11.0",
     "react-scripts": "5.0.1",
