--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-leaflet": "^4.2.1",
+    "react-map-gl": "^7.1.6",
     "react-parallax-tilt": "^1.7.170",
     "react-router-dom": "^6.11.0",
     "react-scripts": "5.0.1",
-    "react-tsparticles": "^2.9.3",
+    "react-tsparticles": "^2.12.2",
     "styled-components": "^5.3.10",
     "tsparticles": "^2.9.3",
     "web-vitals": "^2.1.4"
