--- a/package.json
+++ b/package.json
@@ -3,27 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@chakra-ui/react": "^2.6.0",
-    "@emotion/react": "^11.10.8",
-    "@emotion/styled": "^11.10.8",
-    "@fortawesome/fontawesome-svg-core": "^6.4.2",
-    "@fortawesome/free-solid-svg-icons": "^6.4.2",
-    "@fortawesome/react-fontawesome": "^0.2.0",
-    "@testing-library/jest-dom": "^6.1.4",
-    "@testing-library/react": "^14.0.0",
-    "framer-motion": "^10.12.4",
-    "leaflet": "^1.9.4",
+    "@chakra-ui/react": "^2.8.2",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "framer-motion": "^11.0.5",
+    "locomotive-scroll": "^4.1.4",
+    "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.11.0",
+    "react-icons": "^5.0.1",
     "react-leaflet": "^4.2.1",
-    "react-parallax-tilt": "^1.7.170",
-    "react-router-dom": "^6.11.0",
+    "react-parallax-tilt": "^1.7.212",
+    "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
     "react-tsparticles": "^2.12.2",
-    "styled-components": "^6.0.9",
-    "tsparticles": "^2.9.3",
-    "web-vitals": "^3.5.0"
+    "styled-components": "^6.1.8",
+    "tsparticles": "^3.2.2",
+    "tsparticles-slim": "^2.12.0",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -48,8 +46,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "eslint-config-react-app": "^7.0.1"
   }
 }
