--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
     "react-tsparticles": "^2.12.2",
+    "rss-parser": "^3.13.0",
     "styled-components": "^6.1.8",
     "tsparticles": "^3.2.2",
     "tsparticles-slim": "^2.12.0",
