--- a/package.json
+++ b/package.json
@@ -6,21 +6,18 @@
     "@chakra-ui/react": "^2.8.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "framer-motion": "^11.0.5",
-    "locomotive-scroll": "^4.1.4",
+    "framer-motion": "^11.18.2",
+    "maplibre-gl": "^5.7.0",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^5.4.0",
-    "react-leaflet": "^4.2.1",
-    "react-parallax-tilt": "^1.7.212",
+    "react-icons": "^5.5.0",
+    "react-map-gl": "^8.0.4",
+    "react-parallax-tilt": "^1.7.307",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
     "react-tsparticles": "^2.12.2",
-    "rss-parser": "^3.13.0",
-    "styled-components": "^6.1.8",
-    "tsparticles": "^3.2.2",
+    "styled-components": "^6.1.19",
     "tsparticles-slim": "^2.12.0",
     "web-vitals": "^2.1.4"
   },
