--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "tsparticles-slim": "^2.12.0",
     "web-vitals": "^2.1.4"
   },
-  "homepage": "https://guptashubhang.github.io/portfolio/",
+  "homepage": "https://shubhanggupta2000.github.io/",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
